--- a/client/src/welcome.css
+++ b/client/src/welcome.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Slab:300,700');
+
 body {
     margin: 0;
-    background-color:#ececec;
+    background-color: #ececec;
 }
+
+/***** GLOBAL *****/
 
 .welcome {
     height: 100vh;
@@ -11,11 +14,13 @@ body {
     color: #1d1e1c;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    overflow:auto;
+    overflow: auto;
 }
 
 .welcome a {
     text-decoration: none;
+    color: #38a9b4;
+    font-weight: bold;
 }
 
 .welcome h1 {
@@ -25,25 +30,29 @@ body {
     margin: 0;
     line-height: 30px;
 }
+
 .welcome h1 strong {
-    font-weight: 600;
-    color: #67cece;
+    font-weight: 700;
+    color: #38a9b4;
 }
 
 .welcome h2 {
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     margin: 25px 0 5px;
 }
 
 .welcome h3 {
     text-transform: uppercase;
+    font-weight: 500;
     color: #38a9b4;
-    font-family: 'Roboto Slab', serif;
-    font-size: 20px;
-    margin: 0 0 10px;
+    font-size: 16px;
+    margin: 0 0 5px;
+    display: block;
 }
+
+/***** TOP *****/
 
 .welcome__top {
     background-color: #67cece;
@@ -59,10 +68,11 @@ body {
     z-index: 5;
 }
 
+/***** MAIN *****/
+
 .welcome__main {
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
-        0 1px 18px 0 rgba(0, 0, 0, 0.12),
-        0 3px 5px -1px rgba(0, 0, 0, 0.3);
+        0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
     width: 80%;
     max-width: 1100px;
     margin-left: auto;
@@ -73,74 +83,129 @@ body {
 }
 
 .main__aside {
-    display: flex;
-    align-items: center;
-    vertical-align: middle;
     background-color: #afe5e5;
     width: 30%;
+    position: relative;
+    overflow: hidden;
 }
+
+.aside__circle,
 .main__aside svg {
-    max-width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
+
+.aside__circle {
+    background-color: white;
+    border-radius: 50%;
+    width: 90%;
+    height: 0;
+    padding-bottom: 90%;
+}
+
+.aside__circle:after {
+    content: '';
+    width: 4px;
+    left: calc(50% - 5px);
+    top: -50%;
+    position: absolute;
+    height: 100%;
+    background-color: #1d1e1c;
+}
+
+.main__aside svg {
+    width: 100%;
+}
+
 .main__content {
     padding: 30px;
     text-align: left;
     flex: auto;
 }
-
-.main__content .snippet strong {
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 2px 5px;
-    background-color: #ececec;
-}
-
 .other__bloc {
     display: inline-flex;
     align-items: center;
     border: 4px solid #afe5e5;
-    padding: 10px;
+    padding: 10px 20px;
     margin: 10px 0;
-    width: calc(50% - 10px);
-    max-width: 280px;
-    height: 140px;
+    height: 170px;
     box-sizing: border-box;
+    text-align:left;
 }
 
-.other__bloc:first-of-type {
+.other__bloc:not(:last-of-type) {
     margin-right: 10px;
 }
 
+.other__bloc h3:not(:first-child) {
+  margin-top: 15px;
+  padding-top: 5px;
+}
+
 .other__circle {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     background-color: #afe5e5;
     border-radius: 50%;
+    margin-right:20px;
 }
 
-.other__content {
-    text-align: center;
+.other__circle svg{
+  width: 110px;
+}
+
+.buttons__group {
+    display: inline-flex;
+    vertical-align: center;
+}
+
+.buttons__group .buttons__or {
+    width: 4px;
+    position: relative;
+    text-align:center;
+}
+
+.buttons__group .buttons__or:before {
+    content: 'or';
+    font-size: 12px;
+    color: #aaa;
+    line-height: 18px;
+    position: absolute;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 18px;
+    height: 18px;
+}
+
+.buttons__group .other__button:first-child {
+    border-radius: 5px 0 0 5px;
+    padding-right: 15px;
+}
+
+.buttons__group .other__button:last-child {
+    border-radius: 0 5px 5px 0;
     padding-left: 15px;
-    width: 100%;
 }
 
-.welcome__button {
-    background-color: #339ba5;
-    color: white;
+a.other__button {
+    background-color: #e0e1e2;
+    font-size: 11px;
+    color: #686e63;
     cursor: pointer;
-    padding: 5px 8px 5px 5px;
+    padding: 5px 10px;
     display: inline-block;
-    margin: 4px;
     transition: all ease 0.2s;
+    text-transform: uppercase;
 }
 
-.welcome__button svg {
-    margin-right: 5px;
-}
-
-.welcome__button:hover {
-    background-color: #2a818a;
+.other__button:hover {
+    background-color: #afe5e5;
+    color: #339ba5;
 }
 
 .main__button {
@@ -173,49 +238,60 @@ body {
     transform: translateY(-50%) rotate(35deg);
 }
 
+/***** HELP *****/
+
 .welcome__help {
-  background-color:white;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-  padding: 10px 20px;
-  position:fixed;
-  right:-5px;
+    background-color: white;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    position: fixed;
+    right: -5px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 5px;
+    text-align: center;
+}
+
+.welcome__help h2 {
+    color: #aaa;
+    font-size: 12px;
+    margin: 10px 0;
+}
+
+.help__circle {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    display: block;
+    margin: 10px auto;
+    transition: all ease 0.2s;
+    position:relative;
+}
+
+.help__circle svg {
+  position:absolute;
+  left: 50%;
   top: 50%;
-  transform:translateY(-50%);
-  border-radius: 5px;
-  text-align:center;
+  transform:translate(-50%, -50%);
 }
 
-.welcome__help h2{
-  color:#aaa;
-  font-size:12px;
+.help__circle:hover {
+    border-color: #67cece;
+    background-color: #afe5e5;
 }
 
-.help__circle{
-  width: 30px;
-  height: 30px;
-  border-radius:50%;
-  border:2px solid #ccc;
-  display: block;
-  padding:10px;
-  margin: 10px auto;
-  transition: all ease 0.2s;
-}
-.help__circle:hover{
-  border-color: #67cece;
-  background-color: #afe5e5;
-}
+/***** MEDIAS *****/
 
 @media (max-width: 1200px) {
-    .main__aside, .welcome__help {
+    .main__aside,
+    .welcome__help {
         display: none;
     }
     .main__content {
         width: 100%;
         text-align: center;
         padding: 20px;
-    }
-    .other__bloc {
-        width: 280px;
     }
 }
 
@@ -226,7 +302,8 @@ body {
     .welcome h1 {
         display: none;
     }
-    .welcome__flag, .main__other {
+    .welcome__flag,
+    .main__other {
         display: none;
     }
     .main__content {
